--- a/pac/net/k8s/aks/templates/.bin/web-configmap.yaml
+++ b/pac/net/k8s/aks/templates/.bin/web-configmap.yaml
@@ -6,5 +6,5 @@ data:
   appsettings.json: |-
     {
         "API_ENDPOINT": "http://13.77.151.132",
-        "FUNCTIONS_ENDPOINT": "https://azsdkdemoauthfunction.azurewebsites.net"
+        "FUNCTIONS_ENDPOINT": "http://azsdkdemoauthfunction.azurewebsites.net"
     }
